Automatically generate README.md from jsdoc.

--- a/jsdoc2md/README.hbs
+++ b/jsdoc2md/README.hbs
@@ -13,24 +13,12 @@ Verifies argument types.
 Run `npm install --save smockle/safe` to add `safe` to your project.
 
 ## API Reference
-<a name="module_safe.._safe"></a>
-
-### safe~_safe(types, cb, args) ⇒ <code>function</code> &#124; <code>any</code>
-Verifies argument types
-
-**Kind**: inner method of <code>[safe](#module_safe)</code>  
-**Returns**: <code>function</code> &#124; <code>any</code> - Return partially-applied callback or result  
-**Throws**:
-
-- <code>TypeError</code> Argument has invalid type
-
-
-| Param | Type | Description |
-| --- | --- | --- |
-| types | <code>Array</code> | Names and types of each argument |
-| cb | <code>function</code> | Callback function |
-| args | <code>Array</code> | Arguments to callback function |
-
+{{#module name="safe"}}
+{{>body~}}
+{{>member-index~}}
+{{>separator~}}
+{{>members~}}
+{{/module}}
 
 ## Testing
 
