--- a/jsdoc2md/README.hbs
+++ b/jsdoc2md/README.hbs
@@ -43,6 +43,20 @@ b.reduce(toUpperAndNotEmpty, [])
 {{>members~}}
 {{/module}}
 
+{{#module name="type"}}
+{{>body~}}
+{{>member-index~}}
+{{>separator~}}
+{{>members~}}
+{{/module}}
+
+{{#module name="instantiable"}}
+{{>body~}}
+{{>member-index~}}
+{{>separator~}}
+{{>members~}}
+{{/module}}
+
 ## Testing
 
 `safe` includes several unit tests. After cloning the `safe` repo locally, run `npm install` in the project folder to install dependencies. Run `npm test` to execute the tests.
